# wagtail-f-richtext

./: .coveragerc  .gitignore  .gitpod.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  dumpdata.md  package.json  pyproject.toml  setup.py  testmanage.py  tox.ini  tsconfig.json  webpack.config.js
.circleci/: config.yml  trigger-nightly-build.sh
.github/workflows/: test.yml
example/: conf.py  models.py
example/templates/: base.html
example/templates/example/: f_rich_text_page.html  f_rich_text_page_stream_field.html
sandbox/: db.sqlite3
sandbox/home/: models.py
sandbox/home/migrations/: 0003_frichtextpage_frichtextpagestreamfield.py
sandbox/home/templates/blocks/: f_richtext_block.html
sandbox/home/templates/home/: f_rich_text_page.html  f_rich_text_page_stream_field.html
sandbox/home/templates/includes/: extra_css.html  extra_js.html  intro.html
sandbox/sandbox/: wsgi.py
sandbox/sandbox/settings/: base.py  dev.py  framework_bulma.py  framework_codyhouse.py  framework_tachyons.py  framework_tailwind.py
sandbox/sandbox/static/js/: beautify.js
sandbox/sandbox/templates/: base.html
temp/migrations/: 0001_initial.py
tests/: __init__.py  settings.py  urls.py
tests/testapp/: apps.py  models.py
tests/testapp/migrations/: 0002_create_homepage.py  0003_frichtextpage_frichtextpagestreamfield.py
tests/testapp/static/css/: sandbox.css
tests/testapp/templates/: base.html  stream_field.html
tests/testapp/templates/blocks/: f_richtext_block.html
tests/testapp/templates/includes/: nav.html
tests/testapp/templates/tests_testapp/: f_rich_text_page.html  home_page.html
wagtail_f_richtext/: __init__.py  apps.py  parser.py  wagtail_hooks.py
wagtail_f_richtext/static/wagtail_f_richtext/js/: .gitignore
wagtail_f_richtext/templatetags/: frichtext_tags.py
wagtail_f_richtext/test/: apps.py  models.py  settings.py  urls.py
wagtail_f_richtext/test/fixtures/: data.json  test_data.json
wagtail_f_richtext/test/migrations/: 0002_create_homepage.py  0003_frichtextpage_frichtextpagestreamfield.py  0003_frichtextpages.py
wagtail_f_richtext/test/templates/: home_page.html  rich_text.html  stream_field.html
wagtail_f_richtext/test/templates/blocks/: f_richtext_block.html
wagtail_f_richtext/test/templates/wagtail_f_richtext_test/: f_rich_text_page.html  f_rich_text_page_stream_field.html
wagtail_f_richtext/test/tests/: test_f_richtext_tags.py  test_frichtext_filter_field.py  test_frichtext_filter_streamfield.py  test_frichtext_parse_external.py  test_frichtext_parse_internal.py  test_parser.py
