[project]
name = "wagtail-f-richtext"
version = "1.0.0"
description = "An alternative Wagtail richtext filter that applies classes or styles to rich text HTML content."
authors = [
    {name = "Nick Moreton", email = "nickmoreton@me.com"},
]
license = {file = "LICENSE"}
classifiers=[
    "Development Status :: 5 Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 4",
    "Framework :: Wagtail :: 5",
]

requires-python = ">=3.8"
dependencies = [
    "wagtail>=4.1",
]

[project.optional-dependencies]
development = [
    "black==23.1.0",
    "flake8==6.0.0",
    "isort==5.12.0",
]
